# AshinaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: application.cpp  application.hpp  window.cpp  window.hpp
src/render/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
